...
    <string name="addressField_title_testTag">TitleAddressField</string>
    <string name="addressField_value_testTag">ValueAddressField</string>
    <string name="addressForms_component_testTag">AddressFormsComponent</string>

    <!-- Date Picker -->
    <string name="datePickerField_brazilDateTimePattern_text">DD/MM/YYYY</string>
    <string name="datePickerField_component_testTag">DatePickerModalComponentTag</string>
    <string name="datePickerField_trailingIcon_description">Selecionar data</string>
    <string name="datePickerModal_component_testTag">DatePickerModal</string>
    <string name="datePickerModal_confirmButton_label">OK</string>
    <string name="datePickerModal_confirmButton_testTag">DatePickerModalConfirmButton</string>
    <string name="datePickerModal_dismissButton_label">Cancelar</string>
    <string name="datePickerModal_dismissButton_testTag">DatePickerModalDismissButton</string>

    <!-- Dialog -->
    <string name="cepAlertdialog_component_testTag">CepAlertdialogComponentTag</string>
    <string name="cepAlertdialog_confirmButton_text">Confirmar</string>
    <string name="cepAlertdialog_dismissButton_text">Cancelar</string>
    <string name="cepAlertDialog_mockContent_text">Esta ação apagará todo o histórico de pesquisa. Desejas prosseguir?</string>
    <string name="cepAlertDialog_mockTitle_text">Apagar histórico</string>
    <string name="deleteAllComponent_component_testTag">DeleteAllComponentCompose</string>
    <string name="deleteAllComponent_button_testTag">DeleteAllComponentButton</string>
    <string name="deleteAllComponent_button_label">Todos</string>
    <string name="deleteAllComponent_icon_description">Botão para deletar todos os registros do Histórico</string>
    <string name="deleteAllComponent_horizontalDivider_testTag">DeleteAllComponentDivider</string>

    <!-- Fast Scroll -->
    <string name="fastScroll_component_testTag">FastScrollComponent</string>
    <string name="fastScroll_downFab_contentDescription">Mover para o fim da lista</string>
    <string name="fastScroll_fab_testTag">FastScrollFabTag</string>
    <string name="fastScroll_upFab_contentDescription">Mover para o início da lista</string>
    <string name="fastScrollGrid_component_testTag">FastScrollGridComponent</string>
    <string name="fastScrollGrid_downButton_contentDescription">Mover para o fim da lista</string>
    <string name="fastScrollGrid_downButton_testTag">FastScrollGridDownFabTestTag</string>
    <string name="fastScrollGrid_downButton_text">Fim</string>
    <string name="fastScrollGrid_upButton_contentDescription">Mover para o início da lista</string>
    <string name="fastScrollGrid_upButton_testTag">FastScrollGridUpFabTestTag</string>
    <string name="fastScrollGrid_upButton_text">Topo</string>
    <string name="fastScrollList_component_testTag">FastScrollListComponent</string>
    <string name="fastScrollList_downButton_contentDescription">Mover para o fim da lista</string>
    <string name="fastScrollList_downButton_testTag">FastScrollListDownFabTestTag</string>
    <string name="fastScrollList_downButton_text">Fim</string>
    <string name="fastScrollList_upButton_contentDescription">Mover para o início da lista</string>
    <string name="fastScrollList_upButton_testTag">FastScrollListUpFabTestTag</string>
    <string name="fastScrollList_upButton_text">Topo</string>

    <!-- Fields -->
    <string name="cepTextField_component_testTag">AppTextFieldComponent</string>
    <string name="cepTextField_inputCounter_testTag">AppTextFieldInputCounter</string>
    <string name="cepSearchField_clearTrailingIcon">Limpar campo cep</string>
...
    <string name="cepFilter_filterButton_label">Filtrar</string>
    <string name="dateFilter_component_testTag">SingleDateFilterComposable</string>
    <string name="dateFilter_startDateField_testTag">SingleDateFilterField</string>
    <string name="dateFilter_filterButton_testTag">SingleDateFilterButton</string>
    <string name="dateFilter_filterButton_label">Filtrar</string>
    <string name="logFilterChip_component_testTag">LogFilterChipComponentTestTag</string>
    <string name="periodFilter_composable_testTag">PeriodFilterComposable</string>
    <string name="periodFilter_startDateField_label">De</string>
    <string name="periodFilter_startDateField_testTag">PeriodFilterStartDateField</string>
    <string name="periodFilter_endDateField_label">Até</string>
    <string name="periodFilter_endDateField_supportText">A data inicial deve ser menor que a final</string>
    <string name="periodFilter_endDateField_testTag">PeriodFilterEndDateField</string>
    <string name="periodFilter_filterButton_label">Filtrar</string>
    <string name="periodFilter_filterButton_testTag">PeriodFilterButton</string>
    <string name="placeFilter_component_testTag">PlaceFilterComponent</string>
    <string name="placeFilterChip_leadingIcon_description">Filtro %1$s selecionado</string>
    <string name="titleFilter_component_testTag">TitleFilterComposable</string>
    <string name="titleFilter_filterButton_label">Filtrar</string>
    <string name="titleFilter_filterButton_testTag">TitleFilterButton</string>
    <string name="titleFilter_titleField_label">Título</string>
...
